--- a/frontend/chat.html
+++ b/frontend/chat.html
@@ -223,7 +223,7 @@
 
         input.value = "";
 
-        fetch("/chat", {
+        fetch("/apps/chatSmart/chat", {
           method: "POST",
           headers: {
             "Content-Type": "application/json",
